<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fragment POC</string>
    <string name="action_settings">Settings</string>
    <string name="menu_consultations">Consultations</string>
    <string name="menu_medications">Medications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_print">Print</string>
    <string name="menu_email">Email</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="hello">Hello Debra!</string>
    <string name="ready_to_start">Ready to start your consultation?</string>
    <string name="diagnostic">Not sure what\'s wrong?</string>
    <string name="management">Want to manage a condition?</string>
    <string name="search">Enter a symptom or condition</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_home_right_fragment">HomeRightFragment</string>
    <string name="title_activity_topics">Topics</string>
    <string name="title_activity_topics_fragment">Topics</string>
    <string name="start_consultation">Start a New Consultation</string>
    <string name="who">Who is this consultation for?</string>
    <string name="me">Me</string>
    <string name="someone_else">Someone Else</string>
    <string name="select_consultation">Please select a consultation.</string>
    <string name="title_activity_consultations_fragment">ConsultationsFragment</string>
    <string name="title_activity_consultation">Consultation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_consultation_header_fragment">ConsultationHeaderFragment</string>
    <string name="title_activity_consultation_tabs_fragment">ConsultationTabsFragment</string>
    <string name="title_activity_consultation_results_fragment">ConsultationResultsFragment</string>
    <string name="title_activity_consultation_details_fragment">ConsultationDetailsFragment</string>
    <string name="title">Knee Pain</string>
    <string name="date">June 20, 2013</string>
    <string name="results">My Results</string>
    <string name="physicians">Find Physicians</string>
    <string name="summary">Summary</string>
    <string name="title_activity_consultation_selected">ConsultationSelectedActivity</string>
    <string name="title_activity_questionnaire">Consultation</string>

</resources>
