<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TopicsFragment" >

    <TextView 
        android:id="@+id/start_consultation" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" 
        android:text="@string/start_consultation"/>
    
    <Button
        android:id="@+id/who"
        android:layout_below="@+id/start_consultation" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/who" 
    	android:onClick="pickWho" />
    
    <TextView 
        android:id="@+id/select_consultation" 
        android:layout_below="@+id/who" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" 
        android:text="@string/select_consultation"/>

    <ListView
        android:id="@+id/topics_list_view" 
        android:layout_below="@+id/select_consultation" 
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
